--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.14.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "mongoose": "^4.13.7"
   }
 }
